# map-analyzer

./: README.md  bun.lockb  package.json
backend/: .env.example  .gitignore  Cargo.toml
backend/src/: main.rs  routes.rs  utils.rs
backend/src/api/get/: beatmap.rs  mod.rs
frontend/: .env.example  bun.lockb  next.config.mjs  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: analysis.tsx  footer.tsx  header.tsx
frontend/src/components/ui/: input.tsx
frontend/src/lib/: index.ts  osu.ts
